--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,10 @@
   right: 0px;
   top:0px;
 }
+
+.left-menu {
+  padding: 5px 10px;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
+}
